--- a/index.html
+++ b/index.html
@@ -39,15 +39,25 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-8 p-2" id="results-content">
+            <div class="col-md-8 p-2 d-none" id="current-weather-container">
                 <!-- Current City Info -->
-                <div class="p-2 border border-dark">
-                    <h2>Atlanta (DATE) (ICON)</h2>
-                    <p>Temperature: <span>##</span>F</p>
-                    <p>Humidity: <span>##</span>%</p>
-                    <p>Wind Speed: <span>##</span>MPH</p>
-                    <p>UV Index <span>##</span></p>
+                <div class="row m-0 p-2 border border-dark results-card">
+                    <div class="col-md-12">
+                        <h2 id="card-city">Atlanta (DATE) (ICON)</h2>
+                        <p>Temperature: <span id="card-tempF">##</span>F</p>
+                        <p>Humidity: <span id="card-humidity">##</span>%</p>
+                        <p>Wind Speed: <span id="card-wind">##</span>MPH</p>
+                        <p>UV Index <span id="card-uv">##</span></p>
+                    </div>
                 </div>
+                <div class="row m-0 justify-content-center border border-dark" id="forecast-container">
+                    <div class="col-md-12">
+                        <h3>5 Day Forecast: </h3>
+                    </div>
+
+                    <!-- Dynamically generate 5 day forecast cards based on city input -->
+                </div>
+
 
                 <!-- Current City 5 Day Forecast -->
             </div>
