created a render history method to add new entries to history

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <p>UV Index <span id="card-uv">##</span></p>
                     </div>
                 </div>
-                <div class="row m-0 justify-content-center border border-dark" id="forecast-container">
+                <div class="row m-0 mt-2 justify-content-center border border-dark" id="forecast-container">
                     <div class="col-md-12">
                         <h3>5 Day Forecast: </h3>
                     </div>
@@ -64,7 +64,7 @@
         </div>
     </main>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
