--- a/index.html
+++ b/index.html
@@ -27,17 +27,7 @@
                     </div>
                 </form>
                 <!-- Search History -->
-                <div class="" id="search-history-container">
-                    <div class="search-history-div border border-secondary p-3">
-                        Sample City 1
-                    </div>
-                    <div class="search-history-div border border-secondary p-3">
-                        Sample City 2
-                    </div>
-                    <div class="search-history-div border border-secondary p-3">
-                        Sample City 3
-                    </div>
-                </div>
+                <div class="" id="search-history-container"></div>
             </div>
             <div class="col-md-8 p-2 d-none" id="current-weather-container">
                 <!-- Current City Info -->
